[gd_scene load_steps=4 format=2]

[ext_resource path="res://Node2D.gd" type="Script" id=1]

[sub_resource type="Gradient" id=3]
colors = PoolColorArray( 1, 0, 0, 1, 1, 0, 0, 1 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 3 )
width = 20

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1027.0
margin_bottom = 602.0

[node name="Button" type="Button" parent="."]
margin_left = 457.0
margin_top = 526.0
margin_right = 584.0
margin_bottom = 568.0
text = "Get position"

[node name="Joints" type="ColorRect" parent="."]
margin_left = 42.0
margin_top = 32.0
margin_right = 341.0
margin_bottom = 270.0
color = Color( 0, 0, 0, 1 )

[node name="Label" type="Label" parent="Joints"]
margin_left = 128.0
margin_top = 16.0
margin_right = 171.0
margin_bottom = 30.0
text = "Joints"
align = 1
uppercase = true

[node name="j1 Label" type="Label" parent="Joints"]
margin_left = 77.0
margin_top = 65.0
margin_right = 117.0
margin_bottom = 79.0
text = "j1:"

[node name="j1" type="Label" parent="Joints"]
margin_left = 131.0
margin_top = 65.0
margin_right = 202.0
margin_bottom = 79.0
rect_pivot_offset = Vector2( -373, -142 )

[node name="j2 Label" type="Label" parent="Joints"]
margin_left = 77.0
margin_top = 119.0
margin_right = 117.0
margin_bottom = 133.0
text = "j2:"

[node name="j2" type="Label" parent="Joints"]
margin_left = 131.0
margin_top = 119.0
margin_right = 171.0
margin_bottom = 133.0
rect_pivot_offset = Vector2( -373, -142 )

[node name="j3 Label" type="Label" parent="Joints"]
margin_left = 77.0
margin_top = 175.0
margin_right = 117.0
margin_bottom = 189.0
text = "j3:"

[node name="j3" type="Label" parent="Joints"]
margin_left = 131.0
margin_top = 175.0
margin_right = 171.0
margin_bottom = 189.0
rect_pivot_offset = Vector2( -373, -142 )

[node name="Position" type="ColorRect" parent="."]
margin_left = 692.0
margin_top = 32.0
margin_right = 991.0
margin_bottom = 270.0
rect_pivot_offset = Vector2( -1125, 53 )
color = Color( 0, 0, 0, 1 )

[node name="Label" type="Label" parent="Position"]
margin_left = 117.0
margin_top = 17.0
margin_right = 181.0
margin_bottom = 31.0
text = "Position"
align = 1
uppercase = true

[node name="x Label" type="Label" parent="Position"]
margin_left = 84.0
margin_top = 54.0
margin_right = 124.0
margin_bottom = 68.0
rect_pivot_offset = Vector2( -373, -142 )
text = "X:"

[node name="x" type="Label" parent="Position"]
margin_left = 144.0
margin_top = 53.0
margin_right = 184.0
margin_bottom = 67.0
rect_pivot_offset = Vector2( -373, -142 )

[node name="y Label" type="Label" parent="Position"]
margin_left = 85.0
margin_top = 90.0
margin_right = 125.0
margin_bottom = 104.0
rect_pivot_offset = Vector2( -373, -142 )
text = "Y:"

[node name="y" type="Label" parent="Position"]
margin_left = 144.0
margin_top = 88.0
margin_right = 184.0
margin_bottom = 102.0
rect_pivot_offset = Vector2( -373, -142 )

[node name="z Label" type="Label" parent="Position"]
margin_left = 85.0
margin_top = 133.0
margin_right = 125.0
margin_bottom = 147.0
rect_pivot_offset = Vector2( -373, -142 )
text = "Z:"

[node name="z" type="Label" parent="Position"]
margin_left = 149.0
margin_top = 175.0
margin_right = 189.0
margin_bottom = 189.0
rect_pivot_offset = Vector2( -373, -142 )

[node name="r Label" type="Label" parent="Position"]
margin_left = 86.0
margin_top = 173.0
margin_right = 126.0
margin_bottom = 187.0
rect_pivot_offset = Vector2( -373, -142 )
text = "R:"

[node name="r" type="Label" parent="Position"]
margin_left = 145.0
margin_top = 134.0
margin_right = 185.0
margin_bottom = 148.0
rect_pivot_offset = Vector2( -373, -142 )

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="Clear" type="Button" parent="."]
margin_left = 826.0
margin_top = 525.0
margin_right = 953.0
margin_bottom = 567.0
text = "Clear"

[node name="Simulation" type="ColorRect" parent="."]
margin_left = 364.0
margin_top = 190.0
margin_right = 667.0
margin_bottom = 493.0
color = Color( 0, 0, 0, 1 )

[node name="Dobot" type="ColorRect" parent="Simulation"]
margin_left = 130.0
margin_top = 126.0
margin_right = 183.0
margin_bottom = 179.0

[node name="Label" type="Label" parent="Simulation"]
margin_left = 136.0
margin_top = 107.0
margin_right = 176.0
margin_bottom = 121.0
text = "Dobot"

[node name="Hook" type="Sprite" parent="Simulation"]
position = Vector2( 156.75, 153.062 )
scale = Vector2( 1.025, 20.125 )
texture = SubResource( 2 )

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
[connection signal="pressed" from="Clear" to="." method="_on_Clear_pressed"]
